[package]
name = "paging-stream"
version = "0.1.0"
authors = ["Jakob Lilliemarck"]
edition = "2024"
description = "A utility to consume paginated data sources as a `futures::Stream`"
license = "MIT"
documentation = "https://github.com/jakob-lilliemarck/paging-stream"
repository = "https://github.com/jakob-lilliemarck/paging-stream"
readme = "README.md"
keywords = ["async", "stream", "pagination", "futures"]
categories = ["async-programming", "network-programming", "rust-patterns"]

[dependencies]
futures = "0.3.31"

[dev-dependencies]
tracing = "0.1.41"
tokio = { version = "1.45.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19" }
